# mangosDeps

acelite/ace/: config-freebsd.h
lualib/lua/: CMakeLists.txt
